fix validation for area crud
